# astron-agent

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTING_CN.md  FAQ.md  PR.md  README-zh.md  README.md
core/agent/: .gitignore  Dockerfile  config.env  main.py  pyproject.toml
core/agent/api/: app.py  router.py
core/agent/api/schemas/: agent_response.py  base_inputs.py  completion_chunk.py  node_trace_patch.py  workflow_agent_inputs.py
core/agent/api/v1/: base_api.py  openapi.py  workflow_agent.py
core/agent/domain/models/: base.py
core/agent/engine/nodes/: base.py
core/agent/engine/nodes/chat/: chat_runner.py
core/agent/engine/nodes/cot/: cot_prompt.py  cot_runner.py
core/agent/engine/nodes/cot_process/: cot_process_runner.py
core/agent/exceptions/: agent_exc.py  base.py  cot_exc.py  llm_codes.py  middleware_exc.py  plugin_exc.py
core/agent/infra/: app_auth.py
core/agent/service/builder/: base_builder.py  workflow_agent_builder.py
core/agent/service/plugin/: knowledge.py  link.py  mcp.py  workflow.py
core/agent/service/runner/: workflow_agent_runner.py
core/agent/tests/: test_app_auth.py  test_base_api.py  test_base_builder.py  test_base_inputs.py  test_base_llm_model.py  test_knowledge_plugin.py  test_plugin_base_link_mcp_workflow.py  test_router_and_schemas.py  test_runner_base_and_chat_cot.py  test_workflow_agent.py  test_workflow_agent_builder.py  test_workflow_agent_inputs_and_plugin_inputs.py  test_workflow_agent_runner.py
core/agent/tests/unit/api/schemas/: test_agent_response.py
docs/: CONTRIBUTING_CN.md  README-zh.md  (+8 more)
(+616 files in other folders)
